scrollbar issue fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -349,6 +349,11 @@ body {
   }
 }
 .address-list{
+  &:first-child{
+    h3{
+      padding-top: 0;
+    }
+  }
  .address-list-view{
   padding: 16px 16px 10px 16px;
   border-radius: 2px;
@@ -452,7 +457,33 @@ body {
     background-color: #ffffff;
     .address-scroll{
       height: 83vh;
-    overflow: scroll;
+      overflow: scroll;
+      margin-top: 40px;
+      padding-bottom: 130px;
+      &:hover{
+        &::-webkit-scrollbar-thumb {
+          background: #acacac;
+        }
+      }
+        &::-webkit-scrollbar {
+          width: 10px;
+          border-radius: 5px;
+        }
+    
+      /* Track */
+      &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+    
+      /* Handle */
+      &::-webkit-scrollbar-thumb {
+        background: #d8d3d3;
+      }
+    
+      /* Handle on hover */
+      &::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
     }
     .search-icon{
       position: absolute;
@@ -1053,11 +1084,13 @@ body {
   border-radius: 4px;
   padding: 30px 0;
   padding-left: 69px;
-  p{
-
+  &:hover{
+    &::-webkit-scrollbar-thumb {
+      background: #acacac;
+    }
   }
     &::-webkit-scrollbar {
-      width: 3px;
+      width: 10px;
       border-radius: 5px;
     }
 
@@ -1126,10 +1159,16 @@ body {
 .menu-items{
   overflow-y: scroll;
   height: 70vh;
-  &::-webkit-scrollbar {
-    width: 3px;
-    border-radius: 5px;
+ 
+  &:hover{
+    &::-webkit-scrollbar-thumb {
+      background: #acacac;
+    }
   }
+    &::-webkit-scrollbar {
+      width: 10px;
+      border-radius: 5px;
+    }
   p{
     font-weight: 600;
   }
@@ -2109,6 +2148,7 @@ html {
       width: 100px;
       height: 100px;  
       opacity: 1;
+      outline: none;
       background: transparent;
   }
   .swiper-pagination-bullets .swiper-pagination-bullet {
